--- a/index.html
+++ b/index.html
@@ -7,45 +7,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Number<span>Guesser</span> </h1>
-    <h2>ULTIMATE CHALLENGER EDITION</h2>
+    <h1 class="top__header">Number<span class="top__span">Guesser</span> </h1>
+    <h2 class="top__header--edition">ULTIMATE CHALLENGER EDITION</h2>
   </header>
   <main>
     <container class="range__container--set">
-      <h3>
-      </h3>
-      <label class="range__set--min">
+      <h3 class="container__headers">Set Range</h3>
+      <label class="range__label range__label--min">
         Min Range
       </label>
-      <input class="range__input--min">
-      <label class="range__set--max">
+      <input class="range__input range__input--min">
+      <label class="range__label range__label--max">
         Max Range
       </label>
-      <input class="range__input--max">
-      <input class="range__btn--update">
+      <input class="range__input range__input--max">
+      <input class="range__btn--update" type="button" value="UPDATE">
     </container>
     <container class="player__container--ch">
-      <h3>
-      </h3>
+      <h2 class="player__header--range">The Current Range is <span>1</span> to <span>100</span></h2>
+      <h3 class="container__headers">Challenger 1</h3>
       <form class="player__form--ch player__form--ch1">
-        <label class="player__label--name player__label--ch1">
+        <label class="player__label player__label--name">Name
         </label>
-        <input class="player__input--name" id="player__name--ch1">
-        <label class="player__label--guess">
-        </label>
+        <input class="player__input" id="player__name--ch1">
+        <label class="player__label">Guess</label>
         <input class="player__input--guess" id="player__guess--ch1">
       </form>
-      <h3>
-      </h3>
+      <h3 class="container__headers">Challenger 2 </h3>
         <form class="player__form--ch player__form--ch2">
-          <label class="player__label--name player__label--ch2">
+          <label class="player__label player__label--name">Name
           </label>
-          <input class="player__input--name" id="player__name--ch2">
-          <label class="player__label--guess">
-          </label>
+          <input class="player__input" id="player__name--ch2">
+          <label class="player__label">Guess</label>
           <input class="player__input--guess" id="player__guess--ch2">
         </form>
     </container>
@@ -58,7 +55,7 @@
         <span class="latest-score__span--low-high" id="latest-score__output--left">thats too high</span>
       </article>
       <article class="latest-score__article--ch2">
-        <span class="latest-score__span--name1">Challenger 1 Name</span>
+        <span class="latest-score__span--name1">Challenger 2 Name</span>
         <h4>current guess</h4>
         <span class="latest-score__span--guess">99</span>
         <span class="latest-score__span--low-high" id="latest-score__output--right">thats too high</span>
