Add text decoration

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <input class="range__btn--update" type="button" value="UPDATE">
     </container>
     <container class="player__container--ch">
-      <h2 class="player__header--range">The Current Range is <span>1</span> to <span>100</span></h2>
+      <h2 class="player__header--range">The Current Range is <span class="player__span--range"id="player__span--min">1</span> to <span class="player__span--range"id="player__span--max">100</span></h2>
       <h3 class="container__headers">Challenger 1</h3>
       <form class="player__form--ch player__form--ch1">
         <label class="player__label player__label--name">Name
