Change btn radius and page header size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1 class="top__header">Number<span class="top__span">Guesser</span> </h1>
+    <h1 class="top__header">NUMBER<span class="top__span">GUESSER</span> </h1>
     <h2 class="top__header--edition">ULTIMATE CHALLENGER EDITION</h2>
   </header>
   <main>
@@ -45,6 +45,11 @@
           <label class="player__label"for="player__guess--ch2">Guess</label>
           <input class="player__input--guess" id="player__guess--ch2">
         </form>
+        <wrapper class="player__wrapper--btns">
+          <input type="button"class="btn"value="SUBMIT GAME">
+          <input type="button"class="btn"value="RESET GAME">
+          <input type="button"class="btn"value="CLEAR GAME">
+        </wrapper>
     </container>
     <container class="latest-score__container">
       <h3 class="container__headers">Latest Score</h3>
