Add inline styling to labels and inputs

--- a/index.html
+++ b/index.html
@@ -30,25 +30,33 @@
     <container class="player__container--ch">
       <h2 class="player__header--range">The Current Range is <span class="player__span--range"id="player__span--min">1</span> to <span class="player__span--range"id="player__span--max">100</span></h2>
       <h3 class="container__headers">Challenger 1</h3>
-      <form class="player__form--ch player__form--ch1">
-        <label class="player__label player__label--name" for="player__name--ch1">Name
-        </label>
-        <input class="player__input" id="player__name--ch1">
-        <label class="player__label" for="player__guess--ch1">Guess</label>
-        <input class="player__input--guess" id="player__guess--ch1">
-      </form>
-      <h3 class="container__headers">Challenger 2 </h3>
-        <form class="player__form--ch player__form--ch2">
-          <label class="player__label player__label--name"for="player__name--ch2">Name
+      <container class="player__form--ch player__form--ch1">
+        <wrapper class="player__wrapper">
+          <label class="player__label player__label--name" for="player__name--ch1">Name
           </label>
-          <input class="player__input" id="player__name--ch2">
-          <label class="player__label"for="player__guess--ch2">Guess</label>
-          <input class="player__input--guess" id="player__guess--ch2">
-        </form>
+          <input class="player__input" id="player__name--ch1">
+        </wrapper>
+        <wrapper class="player__wrapper">
+          <label class="player__label" for="player__guess--ch1">Guess</label>
+          <input class="player__input--guess" id="player__guess--ch1">
+        </wrapper>
+      </container>
+      <h3 class="container__headers">Challenger 2 </h3>
+        <container class="player__form--ch player__form--ch2">
+          <wrapper class="player__wrapper">
+            <label class="player__label player__label--name"for="player__name--ch2">Name
+            </label>
+            <input class="player__input" id="player__name--ch2">
+          </wrapper>
+          <wrapper class="player__wrapper">
+            <label class="player__label"for="player__guess--ch2">Guess</label>
+            <input class="player__input--guess" id="player__guess--ch2">
+          </wrapper>
+        </container>
         <wrapper class="player__wrapper--btns">
-          <input type="button"class="btn"value="SUBMIT GAME">
-          <input type="button"class="btn"value="RESET GAME">
-          <input type="button"class="btn"value="CLEAR GAME">
+          <input type="button"class="btn"value="SUBMIT GAME"id="player__btn--submit">
+          <input type="button"class="btn"value="RESET GAME"id="player__btn--reset">
+          <input type="button"class="btn"value="CLEAR GAME"id="player__btn--clear">
         </wrapper>
     </container>
     <container class="latest-score__container">
