--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   <link rel="stylesheet" type="text/css" media="screen" href="normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Number<span>Guesser</span> </h1>
+    <h1>NUMBER<span>GUESSER</span> </h1>
     <h2>ULTIMATE CHALLENGER EDITION</h2>
   </header>
   <main>
     <container class="range__container--set">
-      <h3>
+      <h3>Set Range
       </h3>
       <label class="range__set--min">
         Min Range
@@ -28,26 +29,29 @@
       <input class="range__btn--update">
     </container>
     <container class="player__container--ch">
-      <h3>
+      <h3>The current range is from 1 to 100
       </h3>
-      <form class="player__form--ch player__form--ch1">
-        <label class="player__label--name player__label--ch1">
+      <form class="player__form--ch player__form--ch1"> Challenger 1 
+        <label class="player__label--name player__label--ch1"> Name
         </label>
-        <input class="player__input--name" id="player__name--ch1">
-        <label class="player__label--guess">
+        <input class="player__input--name" id="player__name--ch1"> 
+        <label class="player__label--guess"> Guess
         </label>
         <input class="player__input--guess" id="player__guess--ch1">
       </form>
       <h3>
       </h3>
-        <form class="player__form--ch player__form--ch2">
-          <label class="player__label--name player__label--ch2">
+        <form class="player__form--ch player__form--ch2"> Challenger 2
+          <label class="player__label--name player__label--ch2"> Name
           </label>
           <input class="player__input--name" id="player__name--ch2">
-          <label class="player__label--guess">
+          <label class="player__label--guess"> Guess
           </label>
           <input class="player__input--guess" id="player__guess--ch2">
         </form>
+        <button class="player__btn--submit">Submit</button>
+        <button class="player__btn--reset">Reset</button>
+        <button class="player__btn--clear">Clear</button>
     </container>
     <container class="latest-score__container">
       <h3>Latest Score</h3>
