Change height of player header

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <wrapper class="player__wrapper">
           <label class="player__label player__label--name" for="player__name--ch1">Name
           </label>
-          <input class="player__input" id="player__name--ch1">
+          <input class="player__input" id="player__name--ch1"type="text">
         </wrapper>
         <wrapper class="player__wrapper">
           <label class="player__label" for="player__guess--ch1">Guess</label>
-          <input class="player__input--guess" id="player__guess--ch1">
+          <input class="player__input--guess" id="player__guess--ch1" type="number" length="3">
         </wrapper>
       </container>
       <h3 class="container__headers">Challenger 2 </h3>
@@ -46,11 +46,11 @@
           <wrapper class="player__wrapper">
             <label class="player__label player__label--name"for="player__name--ch2">Name
             </label>
-            <input class="player__input" id="player__name--ch2">
+            <input class="player__input" id="player__name--ch2"type="text">
           </wrapper>
           <wrapper class="player__wrapper">
             <label class="player__label"for="player__guess--ch2">Guess</label>
-            <input class="player__input--guess" id="player__guess--ch2">
+            <input class="player__input--guess" id="player__guess--ch2" type="number" length="3">
           </wrapper>
         </container>
         <wrapper class="player__wrapper--btns">
