Add random number on load func and custom random number range
Co-Authored-By:Greg <anderson.gregory.mail@gmail.com>

--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
     </div>
     </container>
   </main>
-  <aside class="card__container">
+  <!-- <aside class="card__container">
     <article class="card__article--winner">
       <span class="card__span--name" id="card__name--ch1">Challenger1</span>
       <span class="card__span--vs">vs</span>
       <span class="card__span--name" id="card__name--ch2">Challenger2</span>
       <span class="card__span--winner" id="card__span--winner">Challenger1 Name</span>
       <h3 class="card__header--winner">WINNER</h4>
-    </article>
+    </article> -->
+  <aside class="card__container">
   <section class="winner__section">
     <div class="winner__div--ch">
       <span class="winner__span--ch1">CHALLENGER 1 NAME</span>
