--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="player__container--ch">
       <h2 class="player__header--range">The Current Range is <span class="player__span--range"id="player__span--min">1</span> to <span class="player__span--range"id="player__span--max">100</span></h2>
       <h3 class="container__headers">Challenger 1</h3>
-      <form class="player__form--ch player__form--ch1">
+      <form class="player__form--ch player__form--ch1" id="player__form">
         <wrapper class="player__wrapper">
           <label class="player__label player__label--name" for="player__name--ch1">Name
           </label>
@@ -42,9 +42,7 @@
           <label class="player__label" for="player__guess--ch1">Guess</label>
           <input class="player__input--guess" id="player__guess--ch1" type="number">
         </wrapper>
-      </form>
       <h3 class="container__headers">Challenger 2 </h3>
-        <form class="player__form--ch player__form--ch2">
           <wrapper class="player__wrapper">
             <label class="player__label player__label--name"for="player__name--ch2">Name
             </label>
@@ -79,14 +77,6 @@
     </div>
   </section>
   </main>
-  <!-- <aside class="card__container">
-    <article class="card__article--winner">
-      <span class="card__span--name" id="card__name--ch1">Challenger1</span>
-      <span class="card__span--vs">vs</span>
-      <span class="card__span--name" id="card__name--ch2">Challenger2</span>
-      <span class="card__span--winner" id="card__span--winner">Challenger1 Name</span>
-      <h3 class="card__header--winner">WINNER</h4>
-    </article> -->
   <aside class="card__container">
   <section class="card__section">
     <div class="card__div--ch">
