--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </form>
         <wrapper class="player__wrapper--btns">
           <input type="button"class="btn"value="SUBMIT GAME"id="player__btn--submit">
-          <input type="button"class="btn"value="RESET GAME"id="player__btn--reset">
-          <input type="button"class="btn"value="CLEAR GAME"id="player__btn--clear">
+          <input type="button"class="btn"disabled=true value="RESET GAME"id="player__btn--reset">
+          <input type="button"class="btn"disabled=true value="CLEAR GAME"id="player__btn--clear">
         </wrapper>
       </section>
     <section class="latest-score__container">
