--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </wrapper>
         </form>
         <wrapper class="player__wrapper--btns">
-          <input type="button"class="btn"value="SUBMIT GAME"id="player__btn--submit">
+          <input type="button"class="btn btn--submit"value="SUBMIT GAME"id="player__btn--submit">
           <input type="button"class="btn"disabled=true value="RESET GAME"id="player__btn--reset">
           <input type="button"class="btn"disabled=true value="CLEAR GAME"id="player__btn--clear">
         </wrapper>
