Add disable to submit unless inputs so it doesnt append an empty card

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </wrapper>
         </form>
         <wrapper class="player__wrapper--btns">
-          <input type="button"class="btn btn--submit"value="SUBMIT GAME"id="player__btn--submit">
+          <input type="button"class="btn btn--submit"value="SUBMIT GAME"id="player__btn--submit" disabled=true>
           <input type="button"class="btn"disabled=true value="RESET GAME"id="player__btn--reset">
           <input type="button"class="btn"disabled=true value="CLEAR GAME"id="player__btn--clear">
         </wrapper>
@@ -65,13 +65,13 @@
       <article class="latest-score__article--ch1">
         <span class="latest-score__span--name1" id="latest-score__span--ch1">Challenger 1 Name</span>
         <h4>current guess</h4>
-        <span class="latest-score__span--guess" id="latest-score__guess--ch1">1</span>
+        <span class="latest-score__span--guess" id="latest-score__guess--ch1">?</span>
         <span class="latest-score__span--low-high" id="latest-score__output--left">that's too low</span>
       </article>
       <article class="latest-score__article--ch2">
         <span class="latest-score__span--name1" id="latest-score__span--ch2">Challenger 2 Name</span>
         <h4>current guess</h4>
-        <span class="latest-score__span--guess" id="latest-score__guess--ch2">99</span> 
+        <span class="latest-score__span--guess" id="latest-score__guess--ch2">?</span> 
         <span class="latest-score__span--low-high" id="latest-score__output--right">that's too high</span>
       </article>
     </div>
