--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <span class="latest-score__span--name1" id="latest-score__span--ch1">Challenger 1 Name</span>
         <h4>current guess</h4>
         <span class="latest-score__span--guess" id="latest-score__guess--ch1">?</span>
-        <span class="latest-score__span--low-high" id="latest-score__output--left">that's too low</span>
+        <span class="latest-score__span--low-high" id="latest-score__output--left">PLEASE SUBMIT A GUESS!</span>
       </article>
       <article class="latest-score__article--ch2">
         <span class="latest-score__span--name1" id="latest-score__span--ch2">Challenger 2 Name</span>
         <h4>current guess</h4>
         <span class="latest-score__span--guess" id="latest-score__guess--ch2">?</span> 
-        <span class="latest-score__span--low-high" id="latest-score__output--right">that's too high</span>
+        <span class="latest-score__span--low-high" id="latest-score__output--right">PLEASE SUBMIT A GUESS!</span>
       </article>
     </div>
   </section>
