Add winner name to card

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <section class="range__container--set">
       <h3 class="container__headers range__header">Set Range</h3>
-      <form class="range__wrapper">
+      <form class="range__form">
         <label class="range__label range__label--min"for="range__input--min">
           Min Range
         </label>
