Add name and for labels

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           </div>
         </form>
         <div class="player__wrapper--btns">
-          <input type="button"class="btn btn--submit"value="SUBMIT GAME"id="player__btn--submit" disabled=true>
-          <input type="button"class="btn"disabled=true value="RESET GAME"id="player__btn--reset">
-          <input type="button"class="btn"disabled=true value="CLEAR GAME"id="player__btn--clear">
+          <input type="button"class="btn btn--submit"value="SUBMIT GAME"id="player__btn--submit" disabled=true name="player__btn-submit">
+          <input type="button"class="btn"disabled=true value="RESET GAME"id="player__btn--reset" name="player__btn--reset">
+          <input type="button"class="btn"disabled=true value="CLEAR GAME"id="player__btn--clear" name="player__btn--clear">
         </div>
       </section>
     <section class="latest-score__container">
@@ -66,13 +66,13 @@
         <span class="latest-score__span--name1" id="latest-score__span--ch1">Challenger 1 Name</span>
         <h4>current guess</h4>
         <span class="latest-score__span--guess" id="latest-score__guess--ch1">?</span>
-        <span class="latest-score__span--low-high" id="latest-score__output--left">PLEASE SUBMIT A GUESS!</span>
+        <span class="latest-score__span--low-high" id="latest-score__output--left"name="latest-score_player-one--guess">PLEASE SUBMIT A GUESS!</span>
       </article>
       <article class="latest-score__article--ch2">
         <span class="latest-score__span--name1" id="latest-score__span--ch2">Challenger 2 Name</span>
         <h4>current guess</h4>
         <span class="latest-score__span--guess" id="latest-score__guess--ch2">?</span> 
-        <span class="latest-score__span--low-high" id="latest-score__output--right">PLEASE SUBMIT A GUESS!</span>
+        <span class="latest-score__span--low-high" id="latest-score__output--right"name="latest-score__player-two--guess">PLEASE SUBMIT A GUESS!</span>
       </article>
     </div>
   </section>
