--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <input class="range__btn--update" type="button" value="UPDATE" id="js_range__btn--update">
       </div>
       <div class="range__div--error hidden" id="range__input--error">
-        <img src="error-icon.svg" height=13px width=13px> 
+        <img src="error-icon.svg" height=13px width=13px alt="Error-Icon"> 
         <p>Please enter a valid range</p>
       </div>
       </form>
@@ -42,11 +42,11 @@
       <h2 class="player__header--range">The Current Range is <span class="player__span--range"id="player__span--min">1</span> to <span class="player__span--range"id="player__span--max">100</span></h2>
       <h3 class="container__headers">Challenger 1</h3>
       <div class="player__div--ch1">
-      <form class="player__form--ch player__form--ch1" id="player__form">\
+      <form class="player__form--ch player__form--ch1" id="player__form">
         <div class="player__div--name">
           <label class="player__label player__label--name" for="player__name--ch1">Name
           </label>
-          <input class="player__input" id="player__name--ch1"type="text" pattern="[a-zA-Z0-9]+">
+          <input class="player__input" id="player__name--ch1"type="text">
         </div>
         <div class="player__div--guess">
           <label class="player__label" for="player__guess--ch1">Guess</label>
@@ -56,11 +56,11 @@
         </div>
         <div class="player__div--error">
           <div class="range__div--error hidden" id="ch1__name--error">
-            <img src="error-icon.svg" height= 10px width=10px> 
+            <img src="error-icon.svg" height= 10px width=10px alt=Error-Icon> 
             <p>Please enter a valid name</p>
           </div>
           <div class="range__div--error hidden" id="ch1__guess--error">
-            <img src="error-icon.svg" height= 10px width=10px> 
+            <img src="error-icon.svg" height= 10px width=10px alt=Error-Icon> 
             <p>Please enter a valid number</p>
           </div>
         </div>
@@ -70,7 +70,7 @@
             <div class="player__div--name">
               <label class="player__label player__label--name"for="player__name--ch2">Name
               </label>
-              <input class="player__input" id="player__name--ch2" pattern="[a-zA-Z0-9]+" type="text">
+              <input class="player__input" id="player__name--ch2" type="text">
             </div>
             <div class="player__div--guess">
               <label class="player__label"for="player__guess--ch2">Guess</label>
@@ -80,18 +80,18 @@
       </div>
       <div class="player__div--error">
         <div class="range__div--error hidden" id="ch2__name--error">
-          <img src="error-icon.svg" height= 10px width=10px> 
+          <img src="error-icon.svg" height= 10px width=10px alt="Challenger-Name-One"> 
           <p>Please enter a valid name</p>
         </div>
         <div class="range__div--error hidden" id="ch2__guess--error">
-          <img src="error-icon.svg" height= 10px width=10px> 
+          <img src="error-icon.svg" height= 10px width=10px alt="Challenger-Name-Two"> 
           <p>Please enter a valid number</p>
         </div>
       </div>
-        <div class="player__wrapper--btns">
-          <input type="button"class="btn"value="SUBMIT GAME"id="player__btn--submit">
-          <input type="button"class="btn"value="RESET GAME"id="player__btn--reset">
-          <input type="button"class="btn"value="CLEAR GAME"id="player__btn--clear">
+      <div class="player__wrapper--btns">
+        <input type="button" class="btn btn--submit" value="SUBMIT GAME" id="player__btn--submit" name="Submit--Button">
+        <input type="button" class="btn" disabled=true value="RESET GAME" id="player__btn--reset" name="Reset--Button">
+        <input type="button" class="btn" disabled=true value="CLEAR GAME" id="player__btn--clear" name="Clear--Button">
 <!-- =======
         <div class="player__wrapper">
           <label class="player__label player__label--name" for="player__name--ch1">Name
